[package]
name = "scilib"
description = "A scientific library for the Rust programming language."
documentation = "https://docs.rs/scilib/"
author = "Hugo G. 'AtomicBee' Vivien [hugo.vivien@pm.me]"
keywords = ["mathematics", "science", "physics", "equation"]
categories = ["science", "mathematics"]
repository = "https://github.com/At0micBee/scilib"
license = "GPL-3.0"
version = "0.2.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
