[package]
name = "scilib"
description = "A scientific library for the Rust programming language."
authors = ["Hugo G. 'AtomicBee' Vivien <hugo.vivien@pm.me>"]
categories = ["science", "mathematics"]
keywords = ["physics", "bessel", "fft", "coordinates", "quantum"]
version = "0.3.1"

repository = "https://github.com/At0micBee/scilib"
documentation = "https://docs.rs/scilib/"
readme = "README.md"

license = "GPL-3.0"

edition = "2021"

##########

[dependencies]
nalgebra = "0.30.1"

[profile.test]
opt-level = 3   # Some functions are costly, might as well go faster
