[package]
name = "scilib"
description = "A scientific library for the Rust programming language."
authors = ["Hugo G. 'AtomicBee' Vivien <hugo.vivien@pm.me>"]
categories = ["science", "mathematics"]
keywords = ["physics", "bessel", "fft", "coordinates", "quantum"]
version = "0.5.0"

repository = "https://github.com/At0micBee/scilib"
documentation = "https://docs.rs/scilib/"
readme = "README.md"

license = "GPL-3.0"

edition = "2021"

##########

[profile.test]
opt-level = 3   # Some functions are costly, might as well go faster

# Using latex in the docs to display formulas
[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dependencies]
num-complex = "0.4.1"
